# Kashf

./: README.md  environment.yml  pyproject.toml
docs/: architecture.md  colab_training_guide.md  tpu_setup_guide.md
kashf/: __init__.py  model.py
scripts/: chat.py  setup_tpu_vm.sh
tests/: test_kashf.py
training/: train_fineweb_tpu.py  train_fineweb_v6e.py  train_fineweb_v6e_run2.py  train_wikipedia.py  train_wikipedia_4070.py
