[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kashf"
version = "0.1.0"
description = "Kashf — Compact Recurrent-Depth Transformer for single-GPU training"
license = "MIT"
authors = ["SAADAT-Abu"]
readme = "README.md"
keywords = [
    "recurrent depth transformer",
    "mixture of experts",
    "adaptive computation time",
    "LTI stability",
    "multi-query attention",
    "inference-time scaling",
    "language model",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python     = ">=3.8,<4.0"
torch      = ">=2.1.0"
transformers = ">=4.40.0"
datasets   = ">=2.18.0"
loguru     = ">=0.7.0"

[tool.poetry.group.test.dependencies]
pytest = ">=8.1.1"

[tool.poetry.group.dev.dependencies]
black  = "*"
ruff   = "*"
pytest = "*"

[tool.ruff]
line-length = 100

[tool.black]
target-version = ["py310"]
line-length = 100
